# libsml

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGlibcMath.cmake  FindUUID.cmake
examples/: CMakeLists.txt
sml/: CMakeLists.txt
test/: CMakeLists.txt
